objects/ASI_CRM_Direct_Rebate_Data__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Group</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Direct Rebate Data (Customer Group)</relationshipLabel>
        <relationshipName>Direct_Rebate_Data2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Direct_Rebate_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Direct Rebate External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Direct Rebate Data</relationshipLabel>
        <relationshipName>Direct_Rebate_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pay_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay To</label>
        <referenceTo>ASI_CRM_Pay_To__c</referenceTo>
        <relationshipLabel>Direct Rebate Data</relationshipLabel>
        <relationshipName>Direct_Rebate_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11 - Direct CS Price Promotion</fullName>
                </value>
                <value>
                    <fullName>02 - Indirect Supporting</fullName>
                </value>
                <value>
                    <fullName>03 - Key Account Listing Regular</fullName>
                </value>
                <value>
                    <fullName>04 - Indirect Special Spot</fullName>
                </value>
                <value>
                    <fullName>05 - Indirect Anti-GMA</fullName>
                </value>
                <value>
                    <fullName>06 - Indirect CS Price Promotion</fullName>
                </value>
                <value>
                    <fullName>07 - Key Account Listing Spot</fullName>
                </value>
                <value>
                    <fullName>08 - Direct Supporting</fullName>
                </value>
                <value>
                    <fullName>09 - Direct Special Spot</fullName>
                </value>
                <value>
                    <fullName>10 - Direct Anti-GMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Direct Rebate Data</relationshipLabel>
        <relationshipName>Direct_Rebate_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Direct Rebate Data (Sold To)</relationshipLabel>
        <relationshipName>Direct_Rebate_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Direct Rebate Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_Pay_To__c</columns>
        <columns>ASI_CRM_Rebate_Type__c</columns>
        <columns>ASI_CRM_Ship_To__c</columns>
        <columns>ASI_CRM_Sold_To__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Unit_Price__c</columns>
        <columns>ASI_CRM_Customer_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Direct_Rebate_Data__c.ASI_CRM_JP_Direct_Rebate_Data</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DRD{00000000}</displayFormat>
        <label>Direct Rebate Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Rebate Data</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Direct_Rebate_Data</fullName>
        <active>true</active>
        <label>JP CRM Direct Rebate Data</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>